--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
 }
      </style>
      <script>hljs.initHighlightingOnLoad();</script>
-    <title>Form Generator</title>
+    <title>That's Right! I'm Kira...</title>
 
 </head>
 <body>
